@@ -1,0 +1,8 @@
+package dev.andrybak.resoday.gui.settings;
+
+public interface VisibleHabitChangedListener {
+	/**
+	 * This method is called whenever the habit (tab) which is currently visible (open) changes.
+	 */
+	void onVisibleHabitChanged();
+}
