@@ -1,0 +1,1 @@
+{"version":2,"data":{"dates":[],"visibility":"VISIBLE","habitCalendarLayout":"CLASSIC_HORIZONTAL","name":"Horizontal example","id":"36df74b4-0976-4689-a412-bf8e18795205"}}
